Updates from Overleaf

--- a/Report/Final-Report.tex
+++ b/Report/Final-Report.tex
@@ -84,17 +84,20 @@
 The project that was chosen in our instance, was one that was thought of by ourselves. The main goal is to create a functioning system that can read an RFID tag or card and compare it's UID to a database running on a webserver. To communicate with this database the circuit obviously needs an internet connection in some way. And most important of all, the hardware and the database need some solid code to make it work as intended.
 
 \section{Design}
-The design consists primarily of a circuit with an Arduino Uno, a 20x4 character LCD screen, an RFID reader, and additionally an ESP32. To improve the interaction with the system, a buzzer and two LEDs are also included. The original plan was to run the main code on the Arduino itself, while the Arduino and ESP32 are interconnected to assure a WiFi connection. However, this is unnecessary and can cause annoying issues with the communication between the Arduino and ESP32. Therefore, all code is run directly on the ESP32. The Arduino however, is very useful in early stage testing of the hardware circuit. Lastly, to avoid any soldering, a breadboard and a large amount of coloured jumper wires are used.
+The design consists primarily of a circuit with an Arduino Uno, a 20x4 character LCD screen, an RFID reader, and additionally an ESP32. To improve the interaction with the system, a buzzer and two LEDs are also included. The original plan was to run the main code on the Arduino itself, while the Arduino and ESP32 are interconnected to assure a WiFi connection. However, because there was the option to replace the Arduino with an ESP32 completely, this was chosen to prevent any issues in communication between the two. The Arduino however, is very useful in early stage testing of the hardware circuit. Lastly, to avoid any soldering, a breadboard and a large amount of coloured jumper wires are used.
 
-A program for the Arduino and the ESP32 can both be written using the Arduino IDE. The syntax of the code written in the Arduino IDE is almost identical to that of C++, but makes it very simple to upload the code directly to the Arduino or ESP32 via USB connection. To get the webserver working steadily as quickly as possible these pages are written in TypeScript and EJS. Finally, UIDs are stored in a SQL database.  
+A program for the Arduino and the ESP32 can both be written using the Arduino IDE. The syntax of the code written in the Arduino IDE is almost identical to that of C++, but makes it very simple to upload the code directly to the Arduino or ESP32 via USB connection. To get the webserver working steadily and as quickly as possible these pages are written in TypeScript and EJS. Finally, UIDs are stored in an SQL database.
+
+Now as for the code itself (...)
+
 
 \newpage
 \section{Program code}
 \lstset{style=code}
 
 %Code for ESP32
+\lstinputlisting[language=C++, title=esp32.ino, captionpos=t]{../Code/esp32/esp32.ino}
 \lstinputlisting[language=C++, title=esp32-solo.ino, captionpos=t]{../Code/esp32-solo/esp32-solo.ino}
-\newpage
 %Code for the web server (TypeScript)
 \lstinputlisting[language=JavaScript, title=cards.ts, captionpos=t]{../Code/web-server/src/db/cards.ts}
 \lstinputlisting[language=JavaScript, title=apiRouter.ts, captionpos=t]{../Code/web-server/src/routers/apiRouter.ts}
@@ -108,10 +111,8 @@ For all EJS files, refer to: \par
 {\centering \textbf{/Code/web-server/src/views} \par}
 or the
 {\centering \href{https://github.com/stl12033/Arduino-Programming/tree/main/Code/web-server/src/views}{GitHub page}.\par}
-\section{Test results}
-
 
 \section{Evaluation}
-
+While working on the project we found out that with every step we made we wanted to implement more features. While possibly some prior planning might have been useful, starting work on the project itself is most likely what had caused this inspiration. 
 
 \end{document}
